--- a/StudyNotes/Functional/Base.lproj/Main.storyboard
+++ b/StudyNotes/Functional/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,20 +18,39 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uXr-Js-1ge">
-                                <rect key="frame" x="62" y="73" width="250" height="250"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uXr-Js-1ge">
+                                <rect key="frame" x="62" y="52" width="250" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="5mL-Uh-nRy"/>
+                                    <constraint firstAttribute="height" constant="250" id="R3h-92-9BP"/>
+                                </constraints>
                             </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZBd-Os-nXb" customClass="DrawView" customModule="Functional" customModuleProvider="target">
+                                <rect key="frame" x="37" y="322" width="300" height="200"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="Iay-lk-YoS"/>
+                                    <constraint firstAttribute="width" constant="300" id="TP4-ed-PSr"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="ZBd-Os-nXb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="U3a-c9-Ays"/>
+                            <constraint firstItem="uXr-Js-1ge" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="gzb-W8-YKf"/>
+                            <constraint firstItem="uXr-Js-1ge" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nqd-BW-SUn"/>
+                            <constraint firstItem="ZBd-Os-nXb" firstAttribute="top" secondItem="uXr-Js-1ge" secondAttribute="bottom" constant="20" id="xbe-Jc-OcW"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="drawView" destination="ZBd-Os-nXb" id="MY9-Zp-1PZ"/>
                         <outlet property="imageView" destination="uXr-Js-1ge" id="ysI-Wn-rvX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-807" y="148"/>
         </scene>
     </scenes>
 </document>
