--- a/Re-Study-iOS/Business/Business/Inter-App/InterAppViewController.storyboard
+++ b/Re-Study-iOS/Business/Business/Inter-App/InterAppViewController.storyboard
@@ -17,64 +17,93 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YBs-gN-XK4">
-                                <rect key="frame" x="88" y="198" width="55" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="WeChat"/>
-                                <connections>
-                                    <action selector="wechatButtonClick:" destination="WSU-JU-dNb" eventType="touchUpInside" id="qmH-1M-SLU"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="muC-24-DQC">
-                                <rect key="frame" x="190" y="198" width="62" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Business"/>
-                                <connections>
-                                    <action selector="BusinessButtonClick:" destination="WSU-JU-dNb" eventType="touchUpInside" id="phW-b7-bMf"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uaq-SL-bxy">
-                                <rect key="frame" x="98" y="259" width="34" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Back"/>
-                                <connections>
-                                    <action selector="backButtonClick:" destination="WSU-JU-dNb" eventType="touchUpInside" id="HL2-zU-u3u"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dFn-rf-u8k">
-                                <rect key="frame" x="170" y="259" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Tel"/>
-                                <connections>
-                                    <action selector="telButtonClick:" destination="WSU-JU-dNb" eventType="touchUpInside" id="o1N-rc-B9e"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VZo-v7-Hgx">
-                                <rect key="frame" x="84" y="334" width="54" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="General"/>
-                                <connections>
-                                    <action selector="settingsButtonClick:" destination="WSU-JU-dNb" eventType="touchUpInside" id="QG2-62-Z1p"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fHs-f7-ScO" userLabel="Social">
-                                <rect key="frame" x="166" y="343" width="95" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Social"/>
-                                <connections>
-                                    <action selector="socialButtonClick:" destination="WSU-JU-dNb" eventType="touchUpInside" id="vyx-4W-ntJ"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N8V-Qo-Isu">
-                                <rect key="frame" x="82" y="404" width="50" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="UMeng"/>
-                                <connections>
-                                    <action selector="umengButtonClick:" destination="WSU-JU-dNb" eventType="touchUpInside" id="hER-ro-afH"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="gbb-7S-uZc">
+                                <rect key="frame" x="88.5" y="108.5" width="198" height="150"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ZVc-yF-Mxp">
+                                        <rect key="frame" x="0.0" y="0.0" width="198" height="30"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YBs-gN-XK4">
+                                                <rect key="frame" x="0.0" y="0.0" width="99" height="30"/>
+                                                <state key="normal" title="WeChat"/>
+                                                <connections>
+                                                    <action selector="wechatButtonClick:" destination="WSU-JU-dNb" eventType="touchUpInside" id="qmH-1M-SLU"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="muC-24-DQC">
+                                                <rect key="frame" x="99" y="0.0" width="99" height="30"/>
+                                                <state key="normal" title="Business"/>
+                                                <connections>
+                                                    <action selector="BusinessButtonClick:" destination="WSU-JU-dNb" eventType="touchUpInside" id="phW-b7-bMf"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="dTj-1U-7Jz">
+                                        <rect key="frame" x="0.0" y="40" width="198" height="30"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uaq-SL-bxy">
+                                                <rect key="frame" x="0.0" y="0.0" width="94" height="30"/>
+                                                <state key="normal" title="Back"/>
+                                                <connections>
+                                                    <action selector="backButtonClick:" destination="WSU-JU-dNb" eventType="touchUpInside" id="HL2-zU-u3u"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dFn-rf-u8k">
+                                                <rect key="frame" x="104" y="0.0" width="94" height="30"/>
+                                                <state key="normal" title="Tel"/>
+                                                <connections>
+                                                    <action selector="telButtonClick:" destination="WSU-JU-dNb" eventType="touchUpInside" id="o1N-rc-B9e"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="2GH-0E-qx6">
+                                        <rect key="frame" x="0.0" y="80" width="198" height="30"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VZo-v7-Hgx">
+                                                <rect key="frame" x="0.0" y="0.0" width="94" height="30"/>
+                                                <state key="normal" title="General"/>
+                                                <connections>
+                                                    <action selector="settingsButtonClick:" destination="WSU-JU-dNb" eventType="touchUpInside" id="QG2-62-Z1p"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fHs-f7-ScO" userLabel="Social">
+                                                <rect key="frame" x="104" y="0.0" width="94" height="30"/>
+                                                <state key="normal" title="Social"/>
+                                                <connections>
+                                                    <action selector="socialButtonClick:" destination="WSU-JU-dNb" eventType="touchUpInside" id="vyx-4W-ntJ"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="edx-sh-opd">
+                                        <rect key="frame" x="0.0" y="120" width="198" height="30"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N8V-Qo-Isu">
+                                                <rect key="frame" x="0.0" y="0.0" width="94" height="30"/>
+                                                <state key="normal" title="UMeng Share"/>
+                                                <connections>
+                                                    <action selector="umengShareButtonClick:" destination="WSU-JU-dNb" eventType="touchUpInside" id="WV5-UK-GIB"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7ua-6H-Wwx">
+                                                <rect key="frame" x="104" y="0.0" width="94" height="30"/>
+                                                <state key="normal" title="UMeng Login"/>
+                                                <connections>
+                                                    <action selector="umengLoginButtonClick:" destination="WSU-JU-dNb" eventType="touchUpInside" id="1SE-Kr-GWE"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="gbb-7S-uZc" firstAttribute="centerY" secondItem="8eH-1v-tJd" secondAttribute="centerY" constant="-150" id="0YU-v6-vho"/>
+                            <constraint firstItem="gbb-7S-uZc" firstAttribute="centerX" secondItem="8eH-1v-tJd" secondAttribute="centerX" id="SGP-yS-geb"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="d0A-Sg-00T"/>
                     </view>
                 </viewController>
